src/test/ui/rfc1598-generic-associated-types/iterable.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/iterable.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:11:47
   |
LL |     type Iter<'a>: Iterator<Item = Self::Item<'a>>;
   |                                               ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:40:53
   |
LL | fn make_iter<'a, I: Iterable>(it: &'a I) -> I::Iter<'a> {
   |                                                     ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:45:60
   |
LL | fn get_first<'a, I: Iterable>(it: &'a I) -> Option<I::Item<'a>> {
   |                                                            ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:14:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a>;
   |                                         ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:23:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a> {
   |                                         ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/iterable.rs:34:41
   |
LL |     fn iter<'a>(&'a self) -> Self::Iter<'a> {
   |                                         ^^ lifetime argument not allowed

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0109`.
